--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -62,6 +62,6 @@ jobs:
     - name: 'Azure Load Testing'
       uses: ./load-testing/
       with: 
-        loadTestConfigFile: ''D:\a\load-testing\load-testing\sampleapp\SampleApp.yaml'
+        loadTestConfigFile: 'D:\a\load-testing\load-testing\sampleapp\SampleApp.yaml'
         loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
         resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
