Add compile stage to node package

--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         cd load-testing
         npm install
-        npm run build
+        npm run compile
     
     - name: Azure authentication
       uses: azure/login@v1
