Allow customization of test run display name (#49)
* allow customization of test run display name

* Add run description field as parameter

* Update docs. Use Load Test Run "Name" instead of display name

--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,12 @@ inputs:
   loadtestResource:
     description: 'Enter or Select the name of an existing Azure Load Testing resource'
     required: true
+  loadtestRunName:
+    description: 'Custom name for the load test run'
+    required: false
+  loadtestRunDescription:
+    description: 'Custom description for the load test run'
+    required: false
   resourceGroup:
     description: 'Enter or Select the Azure Resource Group that contains the Load test resource specified above'
     required: true
