--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -40,6 +40,9 @@ jobs:
         cd load-testing
         npm install
         npm run compile
+
+    - name: Run Unit Tests
+      run: npm run test
     
     - name: Azure authentication
       uses: azure/login@v1
