--- a/.github/workflows/RunUnitTests.yml
+++ b/.github/workflows/RunUnitTests.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - releases/*
+      - main
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
       - 'releases/*'
+      - main
 # NOTE : This workflow doesn't run on PRs against forks of this repositories
 # Since they won't have access to the repository secrets. Ref: https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
 # CONFIGURATION
@@ -18,9 +20,6 @@ on:
 #   AZURE_CREDENTIALS
 #
 # 2. Change these variables for your configuration:
-env:
-  LOAD_TEST_RESOURCE: "load-testing-ghaction"
-  LOAD_TEST_RESOURCE_GROUP: "load-testing-ghaction-rg"
 
 jobs:
   run-integration-test:
@@ -39,15 +38,6 @@ jobs:
         cd load-testing
         npm install
         npm run compile
-    
-    - name: Azure authentication
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-  
-    - name: 'Azure Load Testing'
-      uses: ./load-testing/
-      with:
-        loadTestConfigFile: 'SampleApp.yaml'
-        loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
-        resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
+
+    - name: Run Unit Tests
+      run: npm run test
