--- a/.github/workflows/RunUnitTests.yml
+++ b/.github/workflows/RunUnitTests.yml
@@ -3,12 +3,12 @@ name: unit tests for main
 on:
   push:
     branches:
-      - main
+      - releases/*
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
-      - main
+      - releases/*
 # NOTE : This workflow doesn't run on PRs against forks of this repositories
 # Since they won't have access to the repository secrets. Ref: https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
 # CONFIGURATION
