--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
         "adm-zip": "^0.5.6",
         "extract-zip": "^2.0.1",
         "form-data": "^4.0.0",
-        "jest": "^29.7.0",
         "js-yaml": "^4.1.0",
         "jwt-decode": "^3.1.2",
         "path": "^0.12.7",
         "typed-rest-client": "^1.8.6"
     },
     "devDependencies": {
-        "@types/jest": "^29.5.12",
-        "@types/node": "^16.5.0",
+        "@types/jest": "^29.5.11",
+        "@types/node": "^10.17.60",
+        "jest": "^29.7.0",
         "jest-junit": "^16.0.0",
-        "ts-jest": "^29.1.2",
-        "typescript": "^4.0.2",
-        "jest": "^29.7.0"
+        "jwt-check-expiration": "^1.0.5",
+        "ts-jest": "^29.1.1",
+        "typescript": "^4.0.2"
     }
 }
