--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -6,7 +6,7 @@ on:
       - releases/*
     paths-ignore:
       - '**.md'
-  pull_request_target:
+  pull_request:
     branches:
       - 'releases/*'
 # NOTE : This workflow doesn't run on PRs against forks of this repositories
@@ -34,16 +34,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     
-    - uses: actions/checkout@v2
-      name: Checkout from PR branch
-      with: 
-        repository: ${{ github.event.pull_request.head.repo.full_name }}
-        path: 'load-testing'
-        ref: ${{ github.event.pull_request.head.ref }}
-
     - name: Installing dependencies and building latest changes
       run: |
-        cd load-testing
         npm install -f
         npm run compile
 
