--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Installing dependencies and building latest changes
       run: |
-        npm install -f
+        npm install --include=dev -f
         npm run compile
 
     - name: Azure authentication
