--- a/.github/workflows/RunUnitTests.yml
+++ b/.github/workflows/RunUnitTests.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Installing dependencies and building latest changes
       run: |
-        npm install -f
+        npm install --include=dev -f
 
     - name: Run Unit Tests
       run: |
