--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -8,7 +8,7 @@ on:
       - '**.md'
   pull_request:
     branches:
-      - releases/*
+      - 'releases/*'
 
 # CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
