--- a/sample-test-jmx.yaml
+++ b/sample-test-jmx.yaml
@@ -1,5 +1,5 @@
 version: v0.1
-testName: hbchvxajwsnob-bfdsnj-nfjsakl
+testName: fdklxmebnjdabjef
 testPlan: SampleApp.jmx
 testType: JMX
 description: 'E2E for the build pipeline'
