--- a/sample-test-url.yaml
+++ b/sample-test-url.yaml
@@ -1,5 +1,5 @@
 version: v0.1
-testName: hbchvxajwsnob-bfdsnj-nfjsakl
+testName: nnkveanjajnsvj
 testPlan: sample-test.json
 testType: URL
 description: 'E2E for the build pipeline'
