--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -35,8 +35,16 @@ jobs:
       with:
         node-version: '20'
 
+    - uses: actions/checkout@v2
+      name: Checkout from PR branch
+      with: 
+        repository: ${{ github.event.pull_request.head.repo.full_name }}
+        path: 'load-testing'
+        ref: ${{ github.event.pull_request.head.ref }}
+
     - name: Installing dependencies and building latest changes
       run: |
+        cd load-testing
         npm install --include=dev -f
         npm ci
 
@@ -46,10 +54,9 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
   
     - name: 'Azure Load Testing'
-      uses: Azure/load-testing@${{ env.COMMIT_ID }}
+      uses: ./load-testing
       with:
         loadTestConfigFile: ${{ matrix.configFile }}
         loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
         resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
       
-    #https://stackoverflow.microsoft.com/questions/394308 when u get the answer for this question update the uses with the proper branch or commit id.
