changes to remove the checkout in the pr build

--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -4,12 +4,13 @@ on:
   push:
     branches:
       - releases/*
-      
+      - main
     paths-ignore:
       - '**.md'
   pull_request:
     branches:
       - releases/*
+      - main
 
 env:
   LOAD_TEST_RESOURCE: "rbac-test"
@@ -35,16 +36,8 @@ jobs:
       with:
         node-version: '20'
 
-    - uses: actions/checkout@v2
-      name: Checkout from PR branch
-      with: 
-        repository: ${{ github.event.pull_request.head.repo.full_name }}
-        path: 'load-testing'
-        ref: ${{ github.event.pull_request.head.ref }}
-
     - name: Installing dependencies and building latest changes
       run: |
-        cd load-testing
         npm install --include=dev -f
         npm ci
 
@@ -54,7 +47,7 @@ jobs:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
   
     - name: 'Azure Load Testing'
-      uses: ./load-testing
+      uses: ./
       with:
         loadTestConfigFile: ${{ matrix.configFile }}
         loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
