--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -12,6 +12,16 @@ on:
       - releases/*
       - main
 
+# NOTE : This workflow doesn't run on PRs against forks of this repositories
+# Since they won't have access to the repository secrets. Ref: https://securitylab.github.com/research/github-actions-preventing-pwn-requests/
+# CONFIGURATION
+# For help, go to https://github.com/Azure/Actions
+#
+# 1. Set up the following secrets in your repository:
+#   AZURE_CREDENTIALS
+#
+# 2. Change these variables for your configuration:
+
 env:
   LOAD_TEST_RESOURCE: "rbac-test"
   LOAD_TEST_RESOURCE_GROUP: "radhika-test"
