--- a/sample-test-url-ubuntu.yaml
+++ b/sample-test-url-ubuntu.yaml
@@ -1,5 +1,5 @@
 version: v0.1
-testName: nnkveanjajnsvj
+testName: fdbnbgbsduns
 testPlan: sample-test.json
 testType: URL
 description: 'E2E for the build pipeline'
