--- a/.github/workflows/pr_check_load_test-ubuntu.yml
+++ b/.github/workflows/pr_check_load_test-ubuntu.yml
@@ -61,6 +61,8 @@ jobs:
           else
             echo "::set-output name=GUID::$(uuidgen)"
           fi
+      shell : bash
+
     - name: Set up testName
       shell: bash
       run: |
