--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -66,8 +66,7 @@ jobs:
     - name: Set up testName
       shell: bash
       run: |
-        # replace 'originalTestName' with the original test name in the file
-        # replacing '${{ steps.guid.outputs.GUID }}' with the new test name for each test
+        # replacing 'testId'(the thing present in the file.) with the new test name ('${{ steps.guid.outputs.GUID }}') in the file.
         # copying the files to a new file and editing the testId for each file in the copied file.
         cp ${{ matrix.configFile }} test-config-${{ steps.guid.outputs.GUID }}.yaml
         sed -i 's/testId/${{ steps.guid.outputs.GUID }}/g' test-config-${{ steps.guid.outputs.GUID }}.yaml
