--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -77,4 +77,14 @@ jobs:
         loadTestConfigFile: test-config-${{ steps.guid.outputs.GUID }}.yaml
         loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
         resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
+
+    - name: Check for results and report files
+      run: |
+        if [[ -f "./loadTest/results.zip" && -f "./loadTest/report.zip" ]]; then
+          echo "Both results.zip and report.zip files are present."
+        else
+          echo "One or both of the files are missing."
+          exit 1
+        fi
+      shell: bash
       
