--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -77,6 +77,7 @@ jobs:
         loadTestConfigFile: test-config-${{ steps.guid.outputs.GUID }}.yaml
         loadTestResource: ${{ env.LOAD_TEST_RESOURCE }}
         resourceGroup: ${{ env.LOAD_TEST_RESOURCE_GROUP }}
+      continue-on-error: true
 
     - name: Check for results and report files
       run: |
