--- a/sample-test-locust.yaml
+++ b/sample-test-locust.yaml
@@ -1,18 +1,16 @@
 version: v0.1
 testName: testId
-testPlan: SampleApp.jmx
-testType: JMX
-description: 'E2E for the build pipeline (JMX)'
+testPlan: SampleApp.py
+testType: Locust
+description: 'E2E for the build pipeline (Locust)'
 env:
 - name: domain
   value: example.com
 - name: protocol
   value: https
-- name: threads_per_engine
+- name: LOCUST_USERS
   value: 1
-- name: ramp_up_time
-  value: 60
-- name: duration_in_sec
+- name: LOCUST_RUN_TIME
   value: 60
 autoStop:
   errorPercentage: 90
