[Multi-Engine] Cleanup Locust flag (#103)
* Remove locust flag
* Add Locust E2E sample file

--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        configFile: ['sample-test-url.yaml', 'sample-test-jmx.yaml']
+        configFile: ['sample-test-url.yaml', 'sample-test-jmx.yaml', 'sample-test-locust.yaml']
         
     runs-on: ${{ matrix.os }}
     steps:
