--- a/sample-test-jmx.yaml
+++ b/sample-test-jmx.yaml
@@ -2,7 +2,7 @@ version: v0.1
 testName: testId
 testPlan: SampleApp.jmx
 testType: JMX
-description: 'E2E for the build pipeline'
+description: 'E2E for the build pipeline (JMX)'
 env:
 - name: domain
   value: example.com
