adding tsc in the pipeline.

--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -53,6 +53,7 @@ jobs:
       run: |
         npm install --include=dev -f
         npm ci
+        tsc
 
     - name: Azure authentication
       uses: azure/login@v1
