adding the npm install typescript seperately.

--- a/.github/workflows/pr_check_load_test.yml
+++ b/.github/workflows/pr_check_load_test.yml
@@ -52,6 +52,7 @@ jobs:
     - name: Installing dependencies and building latest changes
       run: |
         npm install --include=dev -f
+        npm install typescript -g
         npm ci
         tsc
 
